--- a/css/styles.css
+++ b/css/styles.css
@@ -604,6 +604,11 @@ progress {
   max-width: 100%;
   height: auto;
 }
+.certificate-container {
+  width: 30%;
+  height: auto
+}
+
 
 .img-thumbnail {
   padding: 0.25rem;
